// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPhaseTask creates tasks for INSTALL action 1`] = `
Object {
  "testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": Array [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:target-a": [Function],
  "testPhaseName:target-b": [Function],
  "testPhaseName:target-c": [Function],
}
`;

exports[`createPhaseTask creates tasks for RUN_PHASES action 1`] = `
Object {
  "testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": Array [
      Object {
        "asyncType": "series",
        "displayName": "testPhaseName:testPhaseName",
        "tasks": Array [
          "task-fn",
          "task-fn",
          "task-fn",
        ],
      },
      Object {
        "asyncType": "series",
        "displayName": "testPhaseName:testPhaseName",
        "tasks": Array [
          "task-fn",
          "task-fn",
          "task-fn",
        ],
      },
    ],
  },
  "testPhaseName:testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName:testPhaseName",
    "tasks": Array [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:testPhaseName:target-a": [Function],
  "testPhaseName:testPhaseName:target-b": [Function],
  "testPhaseName:testPhaseName:target-c": [Function],
}
`;

exports[`createPhaseTask creates tasks for VERIFY action 1`] = `
Object {
  "testPhaseName": Object {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": Array [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:target-a": [Function],
  "testPhaseName:target-b": [Function],
  "testPhaseName:target-c": [Function],
}
`;
